# LLM-Router-Chatbot

./: .dockerignore  .env.ec2.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.ec2.yml  docker-compose.yml  pyproject.toml
chatbot/: __init__.py  config.py  logging_config.py  main.py
chatbot/agents/harness/: audit_logger.py  confirmation_manager.py  harness.py  policy_engine.py  (+2 more)
chatbot/db/: connection.py
chatbot/memory/: preferences.py
chatbot/middleware/: auth_middleware.py  rate_limiter.py
chatbot/observability/: __init__.py  context.py  metrics.py  middleware.py
chatbot/routers/: auth.py  chat.py  health.py  session.py  ui.py
chatbot/services/: api_adapter.py  mock_server_auth.py  response_synthesizer.py
chatbot/state/: schemas.py  state_manager.py
chatbot/tools/: facility_tools.py
docs/: aws-ecs-beta-deploy.md  ec2-poc-deploy.md
mock-server/: Dockerfile  Mock_Server.postman_collection.json  package-lock.json  package.json  server.js
ops/alerts/: phase3-alert-rules.yml
ops/aws/: README.md  ecs-service.template.json  ecs-task-definition.template.json
ops/dashboards/: phase3-dashboard.json
scripts/: load_test_phase3.py  release_web.sh  start_mock_server.sh  start_web.sh
tests/: smoke_test.py
tests/unit/: test_audit_logger.py  test_auth.py  test_auth_middleware.py  test_chat_flow.py  test_chat_routes.py  test_harness.py  test_metrics.py  test_ollama_client.py  test_planner.py  test_policy_engine.py  test_policy_store.py  test_router.py  test_state_manager.py  test_ui.py  test_ui_hints.py
(+19 files in other folders)
